--- a/frontend/css/scouts.css
+++ b/frontend/css/scouts.css
@@ -434,3 +434,48 @@ main option {
     padding-bottom: 25px;
     cursor: pointer;
 }
+
+/* ==========================================================================
+   banner
+   ========================================================================== */
+
+#nombreDeScout{
+    background-color: black;
+    display:block;
+    width: 900px;
+    height:50px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+    margin-top: 10px;
+    color:white;
+    font-family: inherit;
+}
+
+#table{
+    font-size:large;
+    margin-left: 75px;
+    padding-top: 10px;
+}
+
+li{
+ margin-right: 30px;
+}
+
+/* ==========================================================================
+   Filtreur
+   ========================================================================== */
+
+   #filtreur{
+       color: white;
+       margin-bottom: 5px;
+       font-size: large;
+       font-family: inherit;
+   }
+
+   .filtre {
+    color: white;
+    margin-bottom: 5px;
+    font-size: large;
+    font-family: inherit;
+   }
