--- a/frontend/css/scouts.css
+++ b/frontend/css/scouts.css
@@ -439,43 +439,45 @@ main option {
    banner
    ========================================================================== */
 
-#nombreDeScout{
+#nombreDeScout {
     background-color: black;
-    display:block;
+    display: block;
     width: 900px;
-    height:50px;
+    height: 50px;
     margin-left: auto;
     margin-right: auto;
     border-radius: 10px;
     margin-top: 10px;
-    color:white;
+    color: white;
     font-family: inherit;
 }
 
-#table{
-    font-size:large;
-    margin-left: 75px;
-    padding-top: 10px;
+#nombreDeScout #table {
+    font-size: large;
 }
 
-li{
- margin-right: 30px;
+#nombreDeScout #table li {
+    margin-right: 30px;
+    float: left;
+    padding-top: 10px;
+    padding-left: 20px;
 }
+
 
 /* ==========================================================================
    Filtreur
    ========================================================================== */
 
-   #filtreur{
-       color: white;
-       margin-bottom: 5px;
-       font-size: large;
-       font-family: inherit;
-   }
-
-   .filtre {
+#filtreur{
     color: white;
     margin-bottom: 5px;
     font-size: large;
     font-family: inherit;
-   }
+}
+
+.filtre {
+    color: white;
+    margin-bottom: 5px;
+    font-size: large;
+    font-family: inherit;
+}
